--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
               id="base-of-triangle"
             />
             <!-- mdl-textfield__label -->
-            <label class="mdl-textfield__label" for="base-of-rectangle"
-              >Base of rectangle (cm)</label
+            <label class="mdl-textfield__label" for="base-of-triangle"
+              >Base of triangle (cm)</label
             >
             <!-- class "mdl-textfield__error" -->
             <span class="mdl-textfield__error">Input is not a number.</span>
