--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </header>
       <main class="mdl-layout__content">
         <div class="right-image">
-          <img src="./images/rectangle.png" alt="laptop image" />
+          <img src="./images/area_of_trinagle.png" alt="laptop image" />
         </div>
         <br />
         <div class="page-content">Enter the base and height in cm.</div>
